test/negative/transitionconstraint05.cfr
a
xor b 
      c 
      d 
      e 
      [ ==> d]   

